# pyemail

./: LICENSE  README.md  pyproject.toml  setup.py
pyemail/: pyemail.py
src/oemail/: oemail.py
tests/: demo.py
