[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oemail"
version = "0.0.2"
authors = [
  { name="Zhipeng Ye", email="939647181@qq.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
project.license = "MIT" 

[project.urls]
Homepage = "https://github.com/FourierAI/pyemail"
Issues = "https://github.com/FourierAI/pyemail/issues"